@@ -1,0 +1,18 @@
+
+#Time of push DB: 2019-12-10 14:30:46.013909
+
+[c1:children]
+c1_s1
+
+[c2:children]
+c2_s1
+
+[c1_s1]
+c1_s1_co-1 ansible_host=10.100.12.2 ansible_network_os=ios ansible_user=cisco ansible_password=cisco username=cisco password=cisco platform=ios
+c1_s1_cpe ansible_host=10.0.12.2 ansible_network_os=ios ansible_user=cisco ansible_password=cisco username=cisco password=cisco platform=ios
+c1_s1_ua-1 ansible_host=10.100.200.2 ansible_network_os=ios ansible_user=cisco ansible_password=cisco username=cisco password=cisco platform=ios
+
+[c2_s1]
+c2_s1_co-1 ansible_host=10.101.23.2 ansible_network_os=ios ansible_user=cisco ansible_password=cisco username=cisco password=cisco platform=ios
+c2_s1_cpe ansible_host=10.0.13.2 ansible_network_os=ios ansible_user=cisco ansible_password=cisco username=cisco password=cisco platform=ios
+c2_s1_ua-1 ansible_host=10.101.201.2 ansible_network_os=ios ansible_user=cisco ansible_password=cisco username=cisco password=cisco platform=ios
