@@ -1,0 +1,14 @@
+# usage example: ansible-playbook win-cmd.yml --extra-vars "cmd=ping source=ansible_hostname destination=ip/hostname'"
+---
+- name: Win Execute command
+  hosts: localhost
+  gather_facts: false
+  tasks:
+
+    - name: Win Execute command
+      win_command: '{{ cmd }} {{destination}}'
+      register: output
+      delegate_to: '{{ source }}'
+
+    - debug:
+        msg: '{{ output.stdout_lines }}'
