@@ -1,0 +1,16 @@
+# usage example: ansible-playbook win-user-unlock.yml --extra-vars "user=user_name"
+---
+- name: Win unblock user
+  hosts: ad
+  gather_facts: false
+  tasks:
+
+    - name: Win unblock user
+      win_user:
+        name: '{{ user }}'
+        account_locked: no
+      register: output
+      ignore_errors: yes
+
+    - name: Send message to Slack using a python script
+      local_action: command python3 scripts/win-user-unlock-msg-slack.py "{{ output }}"
