@@ -1,5 +1,5 @@
 [Netor]
-netor_home_directory = /home/adrian/netor-master/
+netor_home_directory = /home/adrian/netor/
 
 [TinyDB]
 db_path_name = ${Netor:netor_home_directory}netor/tinydb/data/db.json
