@@ -388,6 +388,8 @@ def _update_config(tinydb_log_file, __file__, new_netor_home_directory):
                                  "_NETOR_HOME_DIRECTORY = ", new_netor_home_directory, '\"', '')
     replace_static_vars_scripts((new_netor_home_directory + "netor/tinydb/scripts/importcsv.py"),
                                  "_NETOR_HOME_DIRECTORY = ", new_netor_home_directory, '\"', '')
+    replace_static_vars_scripts((new_netor_home_directory + "netor/slack-bot/bot.py"),
+                                 "_NETOR_HOME_DIRECTORY = ", new_netor_home_directory, '\"', '')
 
     replace_static_vars_scripts((new_netor_home_directory + "netor/tinydb/scripts/listdb.py"),
                                  "_DB_PATH_NAME = ", new_netor_home_directory, '\"', 'netor/tinydb/data/db.json')
